--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,6 +66,20 @@ textarea {
     cursor: pointer;
 }
 
+/*----------------------------Admin----------------------------*/
+
+.grid-admin-display {
+    position: relative;
+    display: grid;
+    grid-template-columns: auto;
+    width: 100%
+}
+
+.admin-display-item {
+    border: 1px solid rgb(0, 0, 0);
+    padding: 10px 10px 10px;
+}
+
 /*----------------------------Homepage----------------------------*/
 
 .grid-homepage-menu {
@@ -89,6 +103,39 @@ textarea {
     margin: auto;
     font-family:'Courier New', Courier, monospace;  
 }
+
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.navbar .adminbutton {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  opacity: 0.5;
+}
+
+/* Change the color of links on hover */
+.navbar .adminbutton:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.navbar .adminbutton.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
 
 /*----------------------------Search----------------------------*/
 
