--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -25,6 +25,7 @@
     </div>
 
     <div class="homepage-display" id="homepage-display"></div>
+    <div class="homepage-display-bottom" id="homepage-display-bottom"></div>
     <div id="snackbar"></div>
 
     <div class="navbar">
