--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -20,7 +20,7 @@
         <form action="/search-game">
             <Label for="search-game">Search</Label>
             <input type="text" name="search-game" id="search-game" placeholder="multiplayer games" 
-                    onkeyup = "onKeyUp_searchGames()"></input>
+                    onkeyup = "onKeyUp_searchGames()" onkeydown="return (event.keyCode!=13);"></input>
         </form>
     </div>
 
