--- a/static/css/style.css
+++ b/static/css/style.css
@@ -437,6 +437,26 @@ textarea {
     cursor: pointer;
 }
 
+.back-bar {
+    width: 80%;
+    margin: auto;
+}
+
+.back-button {
+    text-align: center;
+    width: 80px;
+    height: 20px;
+    border: 1px solid rgb(0, 0, 0);
+    cursor: pointer;
+    margin-left: 91%;
+    margin-bottom: 5px;
+}
+
+.back-button:hover {
+    background-color: black;
+    color: white;
+}
+
 .view-requests-button {
     position: absolute;
     right: 10px;
