fixed more issues

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,7 +19,7 @@
         <div class="homepage-menu-item" id="all-games">All Games</div>
         <form action="/search-game">
             <Label for="search-game">Search</Label>
-            <input type="text" name="search-game" id="search-game" placeholder="multiplayer games" 
+            <input type="text" name="search-game" id="search-game" placeholder="igdb database" 
                     onkeyup = "onKeyUp_searchGames()" onkeydown="return (event.keyCode!=13);"></input>
         </form>
     </div>
