--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,16 @@
     line-height: 100px;
 }
 
+.subheader-2 {
+    font-size: 24px;
+    height: 100px;
+    width: 400px;
+    text-align: center;
+    margin: auto;
+    margin-top: 50px;
+    line-height: 100px;
+}
+
 .error-page {
     font-size: 24px;
     height: 100px;
@@ -522,6 +532,62 @@ textarea {
     background-color: palegreen;
 }
 
+.decline-2 {
+    position: absolute;
+    top: 50%;
+    left: 69%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border: 1px solid rgb(0, 0, 0);
+    cursor: pointer;
+    background-color: lightgrey;
+}
+
+.declined-2 {
+    position: absolute;
+    top: 50%;
+    left: 69%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border: 1px solid rgb(0, 0, 0);
+    cursor: pointer;
+    background-color: red;
+}
+
+.approve-2 {
+    position: absolute;
+    top: 50%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border: 1px solid rgb(0, 0, 0);
+    cursor: pointer;
+    background-color: lightgrey;
+}
+
+.approved-2 {
+    position: absolute;
+    top: 50%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border: 1px solid rgb(0, 0, 0);
+    cursor: pointer;
+    background-color: palegreen;
+}
+
 /*---------------Hover Tabs for user schedules--------------*/
 
 /* Set height of body and the document to 100% to enable "full page tabs" */
@@ -832,7 +898,8 @@ body, html {
     padding-top: 10px;
     padding-bottom: 10px;
     line-height: 100px;
-    text-align: center;  
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);  
 }
 
 /*------------------------Request---------------------------*/
