--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,9 +91,6 @@ textarea {
 }
 
 .edit-profile-button {
-    /*top: 50%;
-    left: 35%;
-    transform: translate(-50%, -50%);*/
     width: 150px;
     height: 40px;
     line-height: 40px;
@@ -125,6 +122,71 @@ textarea {
 
 .edit-firstname-text, .edit-lastname-text, .edit-email-text, .edit-password-text {
     width: 220px;
+}
+
+.grid-num-pages {
+    position: relative;
+    display: inline-grid;
+    grid-auto-flow: column;
+    grid-auto-columns: auto;
+    gap: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 10px;
+}
+
+.page-num {
+    font-size: 18px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    margin: auto;
+    cursor: pointer;
+}
+
+.page-num.page-num-selected {
+    border: 1px solid rgb(0, 0, 0);    
+}
+
+.triangle-right {
+    position: absolute;
+	width: 0;
+	height: 0;
+    top: 50%;
+    left: 100%;
+    transform: translateY(-50%);
+	border-top: 10px solid transparent;
+	border-left: 20px solid #555;
+	border-bottom: 10px solid transparent;
+    cursor: pointer;
+    margin-left: 20px;
+}
+
+.triangle-right:hover {
+	border-top: 15px solid transparent;
+	border-left: 30px solid #555;
+	border-bottom: 15px solid transparent;
+}
+
+.triangle-left {
+    position: absolute;
+	width: 0;
+	height: 0;
+    top: 50%;
+    right: 100%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    margin-right: 20px;
+	border-top: 10px solid transparent;
+	border-right: 20px solid #555;
+	border-bottom: 10px solid transparent;
+}
+
+.triangle-left:hover {
+	border-top: 15px solid transparent;
+	border-right: 30px solid #555;
+	border-bottom: 15px solid transparent;
 }
 
 /*----------------------------Admin----------------------------*/
