implemented pagination for user profile page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -40,4 +40,5 @@
 {% block js %}
     <script src="/static/js/printdb.js"></script>
     <script src="/static/js/homepage.js"></script>
+    <script src="/static/js/userprofile.js"></script>
 {% endblock %}
