--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -41,4 +41,5 @@
     <script src="/static/js/printdb.js"></script>
     <script src="/static/js/homepage.js"></script>
     <script src="/static/js/userprofile.js"></script>
-{% endblock %}
+    <script src="/static/js/all-games.js"></script>
+    {% endblock %}
