--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1241,7 +1241,7 @@ body, html {
 
 .grid-users-list {
     display: inline-grid;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto auto;
 }
 
 .grid-request-list {
