--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -42,4 +42,5 @@
     <script src="/static/js/homepage.js"></script>
     <script src="/static/js/userprofile.js"></script>
     <script src="/static/js/all-games.js"></script>
+    <script src="http://www.myersdaily.org/joseph/javascript/md5.js"></script>
     {% endblock %}
