changed to GiantBomb API

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -35,6 +35,7 @@
         <div class="adminbutton" id="requests">Requests</div>
         <div class="adminbutton" id="posts">Posts</div>
         <div class="adminbutton" id="schedule-users">Schedule Users</div>
+        <div class="adminbutton" id="platforms">Platforms</div>
     </div>
 {% endblock %}
 {% block js %}
