--- a/static/css/style.css
+++ b/static/css/style.css
@@ -779,11 +779,34 @@ body, html {
     grid-template-columns: 25% 75%;
     width: 50%;
     margin: auto;
+    margin-top: 30px;
     text-align: left;    
 }
 
 #timezone {
     width: 100%
+}
+
+.grid-display-game {
+    position: relative;
+    display: grid;
+    grid-template-columns: auto auto;
+    width: 1000px;
+    margin: auto;
+    text-align: left;   
+}
+
+.display-game-icon {
+    width: 400px;
+    height: 300px;
+    margin: auto;
+}
+
+.game-description {
+    height: 200px;
+    width: 300px;
+    margin: auto;
+    margin-left: 30px;
 }
 
 /*------------------------Display Games---------------------------*/
