--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,13 +19,13 @@
         <div class="homepage-menu-item" id="all-games">All Games</div>
         <form action="/search-game">
             <Label for="search-game">Search</Label>
-            <input type="text" name="search-game" id="search-game" placeholder="igdb database" 
+            <input type="text" name="search-game" id="search-game" placeholder="GiantBomb database" 
                     onkeyup = "onKeyUp_searchGames()" onkeydown="return (event.keyCode!=13);"></input>
         </form>
     </div>
 
     <div class="homepage-display" id="homepage-display"></div>
-    <div class="homepage-display-bottom" id="homepage-display-bottom"></div>
+    <div class="homepage-display-bottom" id="homepage-display-bottom"><center>Website powered by <a href="https://www.giantbomb.com/api/" target="_blank">GiantBomb</a></center></div>
     <div id="snackbar"></div>
 
     <div class="navbar">
