--- a/static/css/style.css
+++ b/static/css/style.css
@@ -408,6 +408,9 @@ textarea {
     display: grid;
     grid-template-columns: auto;
     width: 100%;
+    height: 1000px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .grid-profile-user {
@@ -455,6 +458,7 @@ textarea {
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: white;
+    overflow: auto;
 }
 
 .profile-schedules-item-text {
@@ -936,7 +940,7 @@ body, html {
     border-radius: 12px;
     margin: auto;
     line-height: 30px;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .loading-bar {
@@ -974,6 +978,17 @@ body, html {
     border-top: 1px solid rgb(0, 0, 0);
     border-right: 1px solid rgb(0, 0, 0);
     border-left: 1px solid rgb(0, 0, 0);
+}
+
+.grid-display-schedules-results {
+    position: relative;
+    width: 80%;
+    height: 1000px;
+    margin: auto;
+    border-top: 1px solid rgb(0, 0, 0);
+    border-right: 1px solid rgb(0, 0, 0);
+    border-left: 1px solid rgb(0, 0, 0);
+    overflow: auto;
 }
 
 .grid-display-schedule-item {
