--- a/static/css/style.css
+++ b/static/css/style.css
@@ -357,6 +357,59 @@ textarea {
     padding-right: 5px;
 }
 
+.animated {
+  -webkit-animation-duration: 2.5s;
+  animation-duration: 2.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+} 
+
+@-webkit-keyframes bounce {
+  0%, 20%, 40%, 60%, 80%, 100% {-webkit-transform: translateY(0);}
+  50% {-webkit-transform: translateY(-15px);}
+} 
+
+@keyframes bounce { 
+  0%, 20%, 40%, 60%, 80%, 100% {transform: translateY(0);}
+  50% {transform: translateY(-15px);}
+} 
+
+.bounce { 
+  -webkit-animation-name: bounce;
+  animation-name: bounce;
+}
+
+.search-results-loading {
+    position: absolute;
+    background-color: black;
+    color: white;
+    top: 1000px;
+    left: 400px;
+    height: 50px;
+    width: 400px;
+    margin: auto;
+    line-height: 50px;
+    border: 1px solid rgb(0, 0, 0);
+    text-align: center;
+    opacity: 0.5;
+    animation-duration: 1s;
+    animation-name: bounce;
+    animation-iteration-count: infinite;
+}
+
+.search-results-text {
+    position: relative;
+    height: 100px;
+    width: 800px;
+    line-height: 100px;
+    margin: auto;
+    text-align: center;
+}
+
 /*----------------------------Registration----------------------------*/
 
 .grid-registration {
@@ -409,7 +462,6 @@ textarea {
     grid-template-columns: auto;
     width: 100%;
     height: 1000px;
-    overflow-x: hidden;
     overflow-y: auto;
 }
 
