--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -25,7 +25,12 @@
     </div>
 
     <div class="homepage-display" id="homepage-display"></div>
-    <div class="homepage-display-bottom" id="homepage-display-bottom"><center>Website powered by <a href="https://www.giantbomb.com/api/" target="_blank">GiantBomb</a></center></div>
+    <div class="homepage-display-bottom" id="homepage-display-bottom">
+        <center>
+            Website powered by <a href="https://www.giantbomb.com/api/" target="_blank">GiantBomb
+            <img src="/static/img/external-link-symbol.png" class="external-link-symbol"></a>
+        </center>
+    </div>
     <div id="snackbar"></div>
 
     <div class="navbar">
