--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1195,16 +1195,82 @@ body, html {
     opacity: 0.5;
 }
 
-.view-schedule-button {
+.schedule-status-box {
     position: absolute;
-    right: 10px;
+    right: 90px;
     bottom: 10px;
     text-align: center;
-    width: 80px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 7px;
+}
+
+.view-schedule-status-box {
+    position: absolute;
+    right: 20px;
+    bottom: 10px;
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 7px;
+}
+
+.schedule-status-box .tooltiptext {
+    position: absolute;
+    right: -3px;
+    bottom: 23px;
+    transform: translateY(3px);
+    transform: translateX(-23px);
+    z-index: 1;
+    visibility: hidden;
+    width: auto;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 5px 5px 5px 5px;
+    border-radius: 7px;
+}
+
+.view-schedule-status-box .tooltiptext {
+    position: absolute;
+    right: -3px;
+    bottom: 23px;
+    transform: translateY(3px);
+    transform: translateX(-23px);
+    z-index: 1;
+    visibility: hidden;
+    width: auto;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 5px 5px 5px 5px;
+    border-radius: 7px;
+}
+
+.schedule-status-box:hover .tooltiptext {
+    visibility: visible;
+}
+
+.view-schedule-status-box:hover .tooltiptext {
+    visibility: visible;
+}
+
+.view-schedule-button {
+    position: absolute;
+    right: 20px;
+    bottom: 10px;
+    text-align: center;
+    width: 50px;
+    height: 50px;
     border: 1px solid rgb(0, 0, 0);
+    border-radius: 10px;
     cursor: pointer;
     transition: 0.3s;
+}
+
+.view-schedule-button:hover {
+    background-color: black;
+    color: white;
 }
 
 .back-bar {
@@ -1245,7 +1311,7 @@ body, html {
     right: 10px;
     bottom: 10px;
     text-align: center;
-    width: 160px;
+    width: 100px;
     height: 20px;
     border: 1px solid rgb(0, 0, 0);  
     cursor: pointer;
