--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,6 +86,12 @@ textarea {
     cursor: pointer;
 }
 
+.homepage-menu-item:hover {
+    background-color: rgb(192, 192, 192);
+    color: black;
+    transition: 0.3s;
+}
+
 .homepage-display-bottom {
     padding-top: 30px;
     text-align: center;
@@ -104,13 +110,14 @@ textarea {
 }
 
 .edit-profile-button {
-    width: 50px;
-    height: 50px;
+    width: 53px;
+    height: 53px;
     text-align: center;
     cursor: pointer;
     margin: auto;
     border-radius: 10px;
     transition: 0.3s;
+    line-height: 53px;
 }
 
 .edit-profile-button:hover {
@@ -240,17 +247,33 @@ textarea {
 
 /*----------------------------Homepage----------------------------*/
 
+.navbar {
+    width: 100%;
+    background-color: rgb(70, 70, 70);
+    height: 50px;
+    padding-top: 0;
+    padding-bottom: 0;
+    overflow: hidden;
+}
+
+#search-game {
+    height: 30px;
+}
+
 .grid-homepage-menu {
     position: relative;
     display: inline-grid;
     grid-template-columns: auto auto auto auto auto auto;
-    width: 100%;
+    width: 80%;
+    height: 50px;
+    line-height: 50px;
     margin: auto;
-    padding: 10px 30px 10px;
-    border: 1px solid rgb(0, 0, 0);
+    padding-left: 15px;
+    padding-right: 15px;
     text-align: center;
     font-size: 16px;
     font-family:'Courier New', Courier, monospace;   
+    color: whitesmoke;
 }
 
 .homepage-display {
@@ -263,7 +286,7 @@ textarea {
     overflow: auto;  
 }
 
-.navbar {
+.navbar2 {
   background-color: #333;
   overflow: hidden;
   position: fixed;
@@ -272,7 +295,7 @@ textarea {
 }
 
 /* Style the links inside the navigation bar */
-.navbar .adminbutton {
+.navbar2 .adminbutton {
   float: left;
   display: block;
   color: #f2f2f2;
@@ -284,13 +307,13 @@ textarea {
 }
 
 /* Change the color of links on hover */
-.navbar .adminbutton:hover {
+.navbar2 .adminbutton:hover {
   background-color: #ddd;
   color: black;
 }
 
 /* Add a color to the active/current link */
-.navbar .adminbutton.active {
+.navbar2 .adminbutton.active {
   background-color: #04AA6D;
   color: white;
 }
@@ -477,7 +500,7 @@ a {
 .grid-profile {
     position: relative;
     display: grid;
-    grid-template-columns: 15% 85%;
+    grid-template-columns: 20% 80%;
     width: 1200px;
     margin: auto;
 }
@@ -496,10 +519,16 @@ a {
     cursor: pointer;
 }
 
+.grid-profile-item:hover {
+    font-weight: bold;
+    transition: 0.3s;
+}
+
 .grid-profile-display {
     position: relative;
     display: grid;
     grid-template-columns: auto;
+    grid-template-rows: 150px 265px 245px 100px;
     width: 100%;
     height: 1000px;
     overflow-y: auto;
@@ -509,16 +538,18 @@ a {
     position: relative;
     display: grid;
     grid-template-columns: 40% 60%;
-    height: 180px;
+    height: 245px;
     width: 500px;
     margin: auto;
     border: 1px solid rgb(0, 0, 0);
+    border-radius: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 .profile-user-item {
     height: 30px;
+    line-height: 30px;
     text-align: left;
     padding-left: 20px;
 }
@@ -886,13 +917,14 @@ body, html {
 .tablink {
     color: rgb(0, 0, 0);
     float: left;
-    border: none;
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
     font-size: 17px;
     width: 100%;
     border: 1px solid rgb(0, 0, 0);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .tablink:hover {
@@ -908,9 +940,9 @@ body, html {
     border: 1px solid rgb(0, 0, 0);
 }
 
-#created {background-color: lightgrey;}
-#joined {background-color: lightgrey;}
-#archived {background-color: lightgrey;}
+#created {background-color: gold;}
+#joined {background-color: yellowgreen;}
+#archived {background-color: lightcoral;}
 #sent {background-color: lightgrey;}
 #received {background-color: lightgrey;}
 
@@ -1413,21 +1445,20 @@ body, html {
     grid-template-columns: 10% 10% ;
     left: 50%;
     transform: translateX(-50%);
-    height: 20px;
+    height: 33px;
     width: 80%;
     margin: auto;
     padding-top: 5px;
     padding-bottom: 5px;
     line-height: 20px;
-    border: 1px solid rgb(0, 0, 0);  
 }
 
 .grid-display-bar-userposts {
     position: relative;
     display: inline-grid;
     grid-template-columns: 10% 10% ;
-    height: 20px;
-    width: 90%;
+    height: 33px;
+    width: 100%;
     left: 50%;
     transform: translateX(-50%);
     padding-top: 5px;
@@ -1479,7 +1510,8 @@ body, html {
     height: 100px;
     width: 100px;
     margin: auto;
-    border-radius: 10%;        
+    border-radius: 10%;
+    border: 3px solid rgb(0, 0, 0);          
 }
 
 .avator-img-profile {
@@ -1488,12 +1520,17 @@ body, html {
     margin: auto;
     border-radius: 10%;    
     margin-bottom: 20px;
+    margin-top: 20px;
+    border: 5px solid rgb(0, 0, 0);  
 }
 
 .avator-img-profile-upload {
     height: 120px;
     width: 120px;
-    margin: auto;    
+    margin: auto;
+    border-radius: 10%;    
+    margin-bottom: 20px;
+    margin-top: 20px;  
 }
 
 .avator-name {
@@ -1741,8 +1778,8 @@ body, html {
 .avator-upload-form.has-advanced-upload {
   border: 2px dashed #ccc;
   border-radius: 20px;
-  height: 200px;
-  width: 200px;
+  height: 175px;
+  width: 175px;
   font-family: sans-serif;
   margin: 10px auto;
   text-align: center;
@@ -1753,7 +1790,7 @@ body, html {
 }
 
 .avator-upload-form.is-dragover {
-  background-color: rgb(202, 202, 202);
+  background-color: rgb(159, 195, 219);
 }
 
 
