--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,7 +3,7 @@
 
 {% block body %}
     <div class="banner" id="banner">
-        Website Name
+        Game Session Maker
     </div>
     <div class="navbar">
         <div class="grid-homepage-menu" id="homepage-menu">
@@ -52,5 +52,4 @@
     <script src="/static/js/homepage.js"></script>
     <script src="/static/js/userprofile.js"></script>
     <script src="/static/js/all-games.js"></script>
-    <script src="http://www.myersdaily.org/joseph/javascript/md5.js"></script>
     {% endblock %}
